[build-system]
requires = ["setuptools~=68.0.0", "wheel~=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name              = "lnxlink"
version           = "2025.2.0"
description       = "Internet Of Things (IOT) integration with Linux using MQTT"
readme            = "README.md"
keywords          = ["lnxlink"]
requires-python   = ">=3.7.0"
authors     = [
    {name="bkbilly", email="bkbilly@hotmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
]
dependencies = [
    "distro>=1.7.0",
    "PyYAML>=5.3.1",
    "paho-mqtt>=1.5.1",
    "requests>=2.28.1",
    "jc>=1.23.0",
    "psutil>=5.8.0",
    "inotify>=0.2.10"
]


[project.urls]
"Source Code" = "https://github.com/bkbilly/lnxlink"
"Documentation"   = "https://bkbilly.gitbook.io/lnxlink"

[tool.setuptools.packages.find]
include = ["lnxlink*"]

[project.scripts]
lnxlink = "lnxlink.__main__:main"
