[build-system]
requires = ["setuptools~=68.0.0", "wheel~=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name              = "lnxlink"
version           = "2025.7.0"
description       = "Internet Of Things (IOT) integration with Linux using MQTT"
readme            = "README.md"
keywords          = ["lnxlink"]
requires-python   = ">=3.7.0"
authors     = [
    {name="bkbilly", email="bkbilly@hotmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
]
dependencies = [
    "distro>=1.9.0",
    "PyYAML>=6.0.1",
    "paho-mqtt>=2.1.0",
    "requests>=2.31.0",
    "psutil>=7.0.0",
    "inotify>=0.2.10",
    "jeepney>=0.9.0"
]

[project.urls]
"Source Code" = "https://github.com/bkbilly/lnxlink"
"Documentation"   = "https://bkbilly.gitbook.io/lnxlink"

[tool.setuptools.packages.find]
include = ["lnxlink*"]

[project.scripts]
lnxlink = "lnxlink.__main__:main"
